# Keyronex-lite

./: .clang-format  .gitignore  Makefile  README.md
docs/notes/: conf.py  index.rst  vm.rst
include/kdk/: libkern.h  port.h  soft.h  soft_compat.h  vm.h
kernel/: meson.build  meson_options.txt  test.c
kernel/vm/: fault.c  meson.build  page.c  vad.c  vmp.h  ws.c
kernel/vm/soft/: vm_soft.c  vmp_soft.h
